tests/rosetta/out/C/ascii-art-diagram-converter.error
cc: exit status 1
/tmp/ascii-art-diagram-converter.c:60:5: error: redefinition of ‘main’
   60 | int main() {
      |     ^~~~
/tmp/ascii-art-diagram-converter.c:6:5: note: previous definition of ‘main’ with type ‘int()’
    6 | int main() {
      |     ^~~~
